--- a/i18n/document/contact/de_DE.xml
+++ b/i18n/document/contact/de_DE.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.contactcard.document.contact" lcid="de_DE">
 	<key id="document-name">Kontaktkarte</key>
 	<key id="label">Name</key>
