--- a/i18n/bo/blocks/contact/fr_FR.xml
+++ b/i18n/bo/blocks/contact/fr_FR.xml
@@ -1,16 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.contactcard.bo.blocks.contact" lcid="fr_FR">
-  <key id="title">Détail d'une fiche contact</key>
-  <key id="showphoto">Afficher la photo</key>
-  <key id="showphoto-help">Afficher la photo</key>
-  <key id="showcompanyinfos">Afficher les informations sur la société</key>
-  <key id="showcompanyinfos-help">Afficher les informations sur la société</key>
-  <key id="showtelephonenumber">Afficher les coordonnées téléphoniques</key>
-  <key id="showtelephonenumber-help">Afficher les coordonnées téléphoniques</key>
-  <key id="showaddress">Afficher l'adresse</key>
-  <key id="showaddress-help">Afficher l'adresse</key>
-  <key id="showcontactpagelink">Afficher le lien vers le formulaire de contact</key>
-  <key id="showcontactpagelink-help">Afficher le lien vers le formulaire de contact</key>
-  <key id="showlinktodetail">Afficher le lien vers le détail</key>
-  <key id="showlinktodetail-help">Afficher le lien vers la page de détail du contact</key>
+	<key id="title">Détail d'une fiche contact</key>
+	<key id="showphoto">Afficher la photo</key>
+	<key id="showphoto-help">Afficher la photo</key>
+	<key id="showcompanyinfos">Afficher les informations sur la société</key>
+	<key id="showcompanyinfos-help">Afficher les informations sur la société</key>
+	<key id="showtelephonenumber">Afficher les coordonnées téléphoniques</key>
+	<key id="showtelephonenumber-help">Afficher les coordonnées téléphoniques</key>
+	<key id="showaddress">Afficher l'adresse</key>
+	<key id="showaddress-help">Afficher l'adresse</key>
+	<key id="showcontactpagelink">Afficher le lien vers le formulaire de contact</key>
+	<key id="showcontactpagelink-help">Afficher le lien vers le formulaire de contact</key>
+	<key id="showlinktodetail">Afficher le lien vers le détail</key>
+	<key id="showlinktodetail-help">Afficher le lien vers la page de détail du contact</key>
 </i18n>
