--- a/i18n/bo/blocks/en_GB.xml
+++ b/i18n/bo/blocks/en_GB.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.contactcard.bo.blocks" lcid="en_GB">
-  <key id="detail">contact card details</key>
+	<key id="detail">contact card details</key>
 </i18n>
