--- a/i18n/bo/tags/fr_FR.xml
+++ b/i18n/bo/tags/fr_FR.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.contactcard.bo.tags" lcid="fr_FR">
-  <key id="contact-block">Détail d'une fiche contact</key>
+	<key id="contact-block">Détail d'une fiche contact</key>
 </i18n>
