--- a/i18n/errors/de_DE.xml
+++ b/i18n/errors/de_DE.xml
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.contactcard.errors" lcid="de_DE">
-  <key id="modules-contactcard-getpreferencesdocument">Sie haben nicht die Rechte folgende Aktion auszuführen:″Präferenzen öffnen″</key>
-  <key id="modules-contactcard-editlocale">Sie haben nicht die Rechte folgende Aktion auszuführen:″Lokale bearbeiten″</key>
-  <key id="modules-contactcard-order">Sie haben nicht die Rechte folgende Aktion auszuführen:″Reihenfolge der Elemente ändern″</key>
-  <key id="modules-contactcard-activate-contact">Sie haben nicht die Rechte folgende Aktion auszuführen:″Kontakt aktivieren″</key>
-  <key id="modules-contactcard-cancel-contact">Sie haben nicht die Rechte folgende Aktion auszuführen:″Kontakt löschen″</key>
-  <key id="modules-contactcard-activate-webcontact">Sie haben nicht die Rechte folgende Aktion auszuführen:″″</key>
-  <key id="modules-contactcard-cancel-webcontact">Sie haben nicht die Rechte folgende Aktion auszuführen:″″</key>
-  <key id="modules-contactcard-enabled">Sie haben nicht die Rechte folgende Aktion auszuführen:″Zugriff auf das Modul″</key>
+	<key id="modules-contactcard-getpreferencesdocument">Sie haben nicht die Rechte folgende Aktion auszuführen:″Präferenzen öffnen″</key>
+	<key id="modules-contactcard-editlocale">Sie haben nicht die Rechte folgende Aktion auszuführen:″Lokale bearbeiten″</key>
+	<key id="modules-contactcard-order">Sie haben nicht die Rechte folgende Aktion auszuführen:″Reihenfolge der Elemente ändern″</key>
+	<key id="modules-contactcard-activate-contact">Sie haben nicht die Rechte folgende Aktion auszuführen:″Kontakt aktivieren″</key>
+	<key id="modules-contactcard-cancel-contact">Sie haben nicht die Rechte folgende Aktion auszuführen:″Kontakt löschen″</key>
+	<key id="modules-contactcard-activate-webcontact">Sie haben nicht die Rechte folgende Aktion auszuführen:″″</key>
+	<key id="modules-contactcard-cancel-webcontact">Sie haben nicht die Rechte folgende Aktion auszuführen:″″</key>
+	<key id="modules-contactcard-enabled">Sie haben nicht die Rechte folgende Aktion auszuführen:″Zugriff auf das Modul″</key>
 </i18n>
