--- a/i18n/frontoffice/de_DE.xml
+++ b/i18n/frontoffice/de_DE.xml
@@ -1,13 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.contactcard.frontoffice" lcid="de_DE">
-  <key id="office">Firma</key>
-  <key id="function">Funktion</key>
-  <key id="phone">Telefon</key>
-  <key id="post">Durchwahl</key>
-  <key id="address">Adresse</key>
-  <key id="contact">Kontakt</key>
-  <key id="fax">Fax</key>
-  <key id="website">Webseite</key>
-  <key id="contactme">Diesem Kontakt eine E-mail schicken</key>
-  <key id="contactnamed">{name} eine E-mail schicken</key>
+	<key id="office">Firma</key>
+	<key id="function">Funktion</key>
+	<key id="phone">Telefon</key>
+	<key id="post">Durchwahl</key>
+	<key id="address">Adresse</key>
+	<key id="contact">Kontakt</key>
+	<key id="fax">Fax</key>
+	<key id="website">Webseite</key>
+	<key id="contactme">Diesem Kontakt eine E-mail schicken</key>
+	<key id="contactnamed">{name} eine E-mail schicken</key>
 </i18n>
